tests/fixtures/negative/compose/ComposeMutableDefaultArgument.kt
package test
import androidx.compose.runtime.Composable

@Composable
fun Foo(items: List<String> = emptyList()) { }
